package org.example;

public class IOS {
  public static String version;

  public void runApp(String appName) {
    System.out.println("Running app " + appName);
  }
}
