package org.example;

public class Processor {
  public static String type;

  public void execute(String instruction) {
    System.out.println("Executing instruction " + instruction);
  }
}
