package org.example;

public class Screen {
  private int resolution;

  public Screen() {
    this.resolution = 1179 * 2556;
  }

  public void display() {
    System.out.println("Displaying screnn...");
  }
}
